force-app/main/default/objects/Job_Role__c/Job_Role__c.object-meta.xml
<CustomObject>
    <label>Job Role</label>
    <nameField>
        <displayFormat>JR-{000000000}</displayFormat>
        <label>Job Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>