force-app/main/default/objects/Job_Role__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Toddler</fullName>
            </value>
            <value>
                <fullName>Preschool</fullName>
            </value>
            <value>
                <fullName>School-age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>