force-app/main/default/objects/Job_Role__c/fields/CLQ_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CLQ_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used an External ID for Job Role  object</description>
    <externalId>true</externalId>
    <label>External_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>