force-app/main/default/objects/Job_Role__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Group from API</description>
    <label>Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>