force-app/main/default/objects/Job_Role__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>date_of_hire from API</description>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>