force-app/main/default/objects/Job_Role__c/fields/Staff_Record__c.field-meta.xml
<CustomField>
    <fullName>Staff_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Record</label>
    <referenceTo>CLQ_Staff_Record__c</referenceTo>
    <relationshipLabel>Job Roles</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>